Tue Jun  2 13:04:06 BST 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml: minor changes to support auto
	  extraction of example code

Mon Jun  1 12:47:56 BST 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut_it.sgml: Update of Italian Tutorial
	  to Tutorial of 24th May, from Daniele Canazza <dcanazz@tin.it>

Fri May 29 13:53:57 BST 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - new section on Events
	  - change all delete_event callbacks to include
	    a GdkEvent parameter
	  - clean up the formatting

	* examples - helloworld.c, helloworld2.c, notebook.c,
	  packbox.c, pixmap.c, progressbar.c, radiobuttons.c,
	  rulers.c, table.c, wheelbarrow.c: change all delete_event
	   callbacks to include a GdkEvent parameter.

1998-05-26  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gdk/gdktypes.h (GdkCrossingMode): New enumeration for the "mode"
	field of crossing events.
	(struct _GdkEventCrossing): Added the following fields: time, x,
	y, x_root, y_root, mode, focus, state.

	* gdk/gdk.c (gdk_event_translate): Fill in the new fields of the
	crossing event structure.

	* gtk/gtkfeatures.h (GDK_HAVE_FULL_CROSSING_EVENT): Annotate
	changes to the crossing event structure.

Tue May 26 15:51:28 1998  Radek Doulik  <gis@academy.cas.cz>

	* gdk/gdk.c: include gdkx.h always (for GDK_ROOT_WINDOW)

Sun May 24 12:11:38 BST 1998  Tony Gale  <gale@gtk.org>

        * docs/gtk_tut.sgml:
           - GtkTooltips, update to current API
           - change all 'gpointer *data' to 'gpointer data'
           - other minor changes

Sat May 23 21:54:05 1998  Owen Taylor  <otaylor@gtk.org>

	* configure.in (LDFLAGS): Bombo out with a moderately
	  helpful message if detection of X libraries fails.

Sat May 23 18:57:06 1998  Owen Taylor  <otaylor@gtk.org>

  [ Combination of:
     gtk-rrh-980412-0.patch (Raja R Harinath <harinath@cs.umn.edu>)
     gtk-jbuhler-980516-0 (Jeremy Buhler <jbuhler@cs.washington.edu>) ]
