@@ -1,3 +1,9 @@
+Tue Jun  2 20:04:45 1998  Lars Hamann  <lars@gtk.org>
+
+	* gtk/gtknotebook.c (gtk_notebook_page_select) (gtk_notebook_focus)
+	* gtk/gtkcontainer.c (gtk_container_focus_move):
+	reversed test sequence for GTK_WIDGET_CAN_FOCUS and GTK_IS_CONTAINER
+
 Tue Jun  2 13:04:06 BST 1998  Tony Gale  <gale@gtk.org>
 
 	* docs/gtk_tut.sgml: minor changes to support auto
